<resources>
    <string name="app_name">Learnin P3K</string>

    <!--Bottom Bar Name-->
    <string name="bottom_bar_home">Beranda</string>
    <string name="bottom_bar_news">Berita</string>
    <string name="bottom_bar_class">Kelas</string>
    <string name="bottom_bar_profile">Profil</string>

    <!--Home Fragment-->
    <string name="home_greeting">Halo,</string>
    <string name="home_username">Username</string>
    <string name="home_continue_course">Mari lanjutkan pembelajaran Anda!</string>
    <string name="home_imgdesc_continue_course">Foto Kelas yang Sedang Dipelajari</string>
    <string name="home_continue_course_title">Judul Kelas</string>
    <string name="home_course_rec">Rekomendasi Kelas</string>
    <string name="home_news_rec">Berita Terbaru</string>
    <string name="fab_challenge_btn">Floating Action Button untuk Weekly Challenge</string>

    <!--Item Home Course-->
    <string name="item_home_course_title">Judul Kelas</string>
    <string name="item_home_course_desc">Deskripsi Kelas</string>
    <string name="item_course_contentdesc">Foto Kelas</string>

    <!--Item Home News-->
    <string name="item_home_news_title">Judul Berita</string>
    <string name="item_home_news_desc">Deskripsi Berita</string>
    <string name="item_home_news_date">Jumat, 10.00 AM</string>
    <string name="item_news_contentdesc">Foto Berita</string>

    <!--News Fragment-->
    <string name="searchbar_hint">Coba Cari Berita</string>
    <string name="title_toolbar_detail_news">Berita</string>
    <string name="search_motivation">Coba cari berita yang Anda inginkan!</string>

    <!--Course Fragment-->
    <string name="title_tab_1">Semua</string>
    <string name="title_tab_2">Sedang</string>
    <string name="title_tab_3">Selesai</string>
    <string name="content_desc_tab">Tab Layout</string>
    <string name="title_toolbar_course">Kelas</string>
    <string name="course_score">Nilai:</string>
    <string name="course_score_result">100</string>
    <string name="course_goal">Tujuan Pembelajaran</string>
    <string name="btn_course">Belajar</string>
    <string name="btn_quiz">Ambil Kuis</string>

    <!--All Course Fragment-->
    <string name="course_availability">kelas tersedia</string>
    <string name="total_course_availability">Jumlah Kelas</string>

    <!--Continue Course Fragment-->
    <string name="course_continue">kelas sedang dipelajari</string>
    <string name="total_course_continue">Jumlah Kelas</string>
    <string name="no_continue_course">Ayo mulai belajar dengan\nkelas pilihan Anda</string>
    <string name="content_desc_continue_course">Karakter Medica sedang memegang buku</string>

    <!--Finished Course Fragment-->
    <string name="course_finished">kelas selesai dipelajari</string>
    <string name="total_course_finished">Jumlah Kelas</string>
    <string name="no_finished_course">Mari selesaikan kelas Anda\ndan terus eksplorasi kelas baru</string>
    <string name="content_desc_finished_course">Karakter Nouri memberikan dua buku</string>

    <!--Profile Fragment-->
    <string name="content_desc_ic_point">Icon Poin</string>
    <string name="total_point">Nomor Poin</string>
    <string name="content_desc_ic_badge">Icon Badge</string>
    <string name="total_badge">Nomor Badge</string>
    <string name="text_btn_leaderboard">Lihat Leaderboard</string>
    <string name="content_desc_ic_setting">Icon Setting</string>

    <!--item profile badge-->
    <string name="title_badge">Judul Badge</string>
    <string name="date_badge">Tanggal Badge</string>

    <!--Setting Activity-->
    <string name="title_toolbar_setting">Pengaturan</string>
    <string name="user_email">Email User</string>
    <string name="user_date">Tanggal Daftar</string>
    <string name="edit_profile">Sunting Profil</string>
    <string name="log_out">Keluar</string>
    <string name="dark_theme">Tema Gelap</string>
    <string name="emergency_service">Layanan Darurat</string>

    <!--Leaderboard Activity-->
    <string name="title_toolbar_leaderboard">Leaderboard</string>

    <!--Welcome Activity-->
    <string name="welcome_msg">Siap untuk mengeskplorasi dan\nbelajar di dunia P3K?</string>
    <string name="welcome_greeting">Selamat Datang di\nLEARNIN P3K</string>
    <string name="btn_login">Masuk</string>
    <string name="btn_signup">Daftar</string>

    <!--Login Activity-->
    <string name="title_toolbar_login">Masuk</string>
    <string name="title_email">Email</string>
    <string name="hint_email">Masukkan Email Anda</string>
    <string name="title_password">Password</string>
    <string name="hint_password">Masukkan Password Anda</string>
    <string name="no_account">Belum punya akun?</string>

    <!--Sign Up Activity-->
    <string name="title_toolbar_signup">Daftar</string>
    <string name="title_username">Nama</string>
    <string name="hint_username">Masukkan Nama Anda</string>
    <string name="title_confirm_password">Konfirmasi Password</string>
    <string name="have_account">Sudah punya akun?</string>

    <!--Edit Profile Activity-->
    <string name="title_toolbar_edit_profile">Sunting Profil</string>
    <string name="btn_choose_avatar">Pilih Avatar</string>
    <string name="btn_update_profile">Perbarui Profil</string>

    <!--item avatar-->
    <string name="avatar_name">Medica</string>
    <string name="btn_choose_avatar_item">Pilih</string>
    <string name="btn_detail_avatar">Detail</string>

    <!--Choose Avatar Activity-->
    <string name="title_toolbar_choose_avatar">Pilih Avatar</string>
    <string name="choose_avatar_info">Pilih salah satu karakter pilihan Anda!</string>

    <!--Detail Avatar Activity-->
    <string name="title_toolbar_detail_avatar">Detail Avatar</string>
    <string name="char_personality">Ceria, Berani, Dapat Diandalkan</string>
    <string name="title_desc">Deskripsi</string>
    <string name="lorem_ipsum">
        Contrary to popular belief, Lorem Ipsum is not simply random text.
        It has roots in a piece of classical Latin literature from 45 BC,
        making it over 2000 years old. Richard McClintock, a Latin professor at
        Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words,
        consectetur, from a Lorem Ipsum passage, and going through the cites of the word in
        classical literature, discovered the undoubtable source.
    </string>

    <!--Quiz Activity-->
    <string name="title_toolbar_quiz">Kuis</string>
    <string name="question_num">1.</string>
    <string name="radio_btn_text">Radio Button Text</string>
    <string name="quiz_timer">Timer:</string>
    <string name="quiz_timer_num">05:00</string>
    <string name="btn_quiz_finish">Akhiri Kuis</string>
    <string name="title_quiz">Nilai Kuis</string>
    <string name="quiz_score">100</string>
    <string name="result_msg">Selamat!</string>
    <string name="result_point">+100pts</string>
    <string name="got_badge">Anda Mendapatkan badge</string>
    <string name="btn_finish">Selesai</string>

    <!--Weekly Challenge-->
    <string name="title_toolbar_weekly_challenge">Challenge</string>
    <string name="title_weekly_challenge">Weekly Challenge #1</string>
    <string name="title_scenario">Skenario</string>
    <string name="scenario_desc">
        Anda sedang mengendarai sepeda motor dan tiba-tiba melihat seorang pengendara sepeda jatuh dan tidak sadarkan diri
        di tengah jalan. Terdapat luka terbuka di bagian kepala dan pendarahan yang cukup deras.
    </string>
    <string name="title_challenge">Tantangan</string>
    <string name="challenge_desc">
        Apa tindakan pertama yang harus Anda lakukan?
    </string>
    <string name="title_quiz_weekly_challenge">Nilai Weekly Challenge</string>
    <string name="nama_penulis">Nama Penulis</string>
    <string name="no_course_inprogress_title">Tidak ada kelas yang sedang dipelajari\nAyo daftar kelas baru!</string>
    <string name="quiz_btn">Kuis</string>
    <string name="badge_desc">Deskripsi Badge</string>
    <string name="badge_category">Kategori Badge</string>
    <string name="btn_close">Tutup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz_message">Kuis berlangsung selama 5 menit. Untuk mengulang kuis, Anda harus menunggu jeda waktu 5 menit.\nSelamat mengerjakan!</string>
    <string name="quiz_attention">Perhatikan!</string>
    <string name="quiz_attempt_history">Riwayat Percobaan</string>
    <string name="btn_start_quiz">Mulai Kuis</string>
    <string name="quiz_timer_message">Kuis dapat dimulai kembali dalam</string>
    <string name="toolbar_detail_attempt">Detail Percobaan</string>
</resources>