<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.quiz.QuizResultFragment">

    <TextView
        android:id="@+id/tv_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_quiz"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_quiz_score_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextColorSuccess"
        android:text="@string/quiz_score"
        android:layout_marginTop="24dp"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_score_title"
        app:layout_constraintStart_toStartOf="@id/tv_score_title"
        app:layout_constraintEnd_toEndOf="@id/tv_score_title"/>

    <TextView
        android:id="@+id/tv_quiz_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_msg"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_quiz_score_num"
        app:layout_constraintStart_toStartOf="@id/tv_quiz_score_num"
        app:layout_constraintEnd_toEndOf="@id/tv_quiz_score_num"/>

    <TextView
        android:id="@+id/tv_quiz_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/result_point"
        app:layout_constraintTop_toBottomOf="@id/tv_quiz_msg"
        app:layout_constraintStart_toStartOf="@id/tv_quiz_msg"
        app:layout_constraintEnd_toEndOf="@id/tv_quiz_msg"/>

    <RelativeLayout
        android:id="@+id/badge_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/tv_quiz_point"
        app:layout_constraintEnd_toEndOf="@id/tv_quiz_point"
        app:layout_constraintTop_toBottomOf="@id/tv_quiz_point">
        <TextView
            android:id="@+id/tv_badge_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            android:text="@string/got_badge"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_badge_result"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_badge_title"
            android:src="@drawable/img_placeholder" />

        <TextView
            android:id="@+id/tv_badge_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/title_badge"
            android:layout_below="@id/iv_badge_result"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_finish_quiz_result"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/btn_finish"
        app:layout_constraintTop_toBottomOf="@id/badge_result"/>
</androidx.constraintlayout.widget.ConstraintLayout>