<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/course_intro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.course.CourseIntroActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:titleMargins="0dp"
        app:navigationIcon="@drawable/arrow_back_icon_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="?attr/colorPrimary"
            android:fontFamily="@font/app_font"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/title_toolbar_course" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_iv_course"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_course"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img_placeholder"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/app_font"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:text="@string/item_home_course_title"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cd_iv_course" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_course_score"
        style="@style/ScoreColorType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toTopOf="@id/tv_title_course"
        app:layout_constraintBottom_toBottomOf="@id/tv_title_course"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_course_score"
                style="@style/ScoreColorType"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/app_font"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/course_score" />

            <TextView
                android:id="@+id/tv_course_score_num"
                style="@style/ScoreColorType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/app_font"
                android:textSize="14sp"
                android:layout_marginStart="4dp"
                android:text="@string/course_score_result"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_course_intro_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/app_font"
        android:textSize="14sp"
        android:text="@string/item_home_course_desc"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_course" />

    <TextView
        android:id="@+id/tv_course_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/app_font"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/course_goal"
        app:layout_constraintTop_toBottomOf="@id/tv_course_intro_desc"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_course_goal_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/app_font"
        android:textSize="14sp"
        android:text="@string/lorem_ipsum"
        app:layout_constraintTop_toBottomOf="@id/tv_course_goal" />

    <Button
        android:id="@+id/btn_course_enroll"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/btn_signup"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/tv_course_goal_desc"/>

    <Button
        android:id="@+id/btn_learn_course"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/btn_course"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/tv_course_goal_desc"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>