<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_avatar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.DetailAvatarActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:titleMargins="0dp"
        app:navigationIcon="@drawable/arrow_back_icon_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="?attr/colorPrimary"
            android:fontFamily="@font/app_font"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/title_toolbar_detail_avatar" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_iv_avatar_char"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <ImageView
            android:id="@+id/iv_avatar_char"
            android:contentDescription="Foto Avatar"
            android:src="@drawable/img_placeholder"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="200dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_avatar_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avatar_name"
        android:fontFamily="@font/app_font"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/cd_iv_avatar_char"
        app:layout_constraintTop_toBottomOf="@id/cd_iv_avatar_char"/>

    <TextView
        android:id="@+id/tv_char_personality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/app_font"
        android:textSize="12sp"
        android:text="@string/char_personality"
        app:layout_constraintStart_toStartOf="@id/cd_iv_avatar_char"
        app:layout_constraintTop_toBottomOf="@id/tv_avatar_name"/>

    <TextView
        android:id="@+id/tv_title_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/app_font"
        android:textSize="18sp"
        android:text="@string/title_desc"
        app:layout_constraintStart_toStartOf="@id/cd_iv_avatar_char"
        app:layout_constraintTop_toBottomOf="@id/tv_char_personality"/>

    <TextView
        android:id="@+id/tv_char_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/app_font"
        android:textSize="14sp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/lorem_ipsum"
        app:layout_constraintTop_toBottomOf="@id/tv_title_desc" />

    <Button
        android:id="@+id/btn_choose_avatar"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/btn_choose_avatar_item"
        app:layout_constraintTop_toBottomOf="@id/tv_char_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>