<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weekly_challenge_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.challenge.WeeklyChallengeResultActivity">

    <TextView
        android:id="@+id/tv_title_quiz_weekly_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/app_font"
        android:text="@string/title_quiz_weekly_challenge"
        android:textColor="?attr/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_quiz_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/app_font"
        android:text="@string/quiz_score"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_quiz_weekly_challenge" />

    <TextView
        android:id="@+id/tv_result_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/app_font"
        android:text="@string/result_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_quiz_score" />

    <TextView
        android:id="@+id/tv_result_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:fontFamily="@font/app_font"
        android:text="@string/result_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result_msg" />

    <TextView
        android:id="@+id/tv_got_badge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/app_font"
        android:text="@string/got_badge"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result_point"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_badge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_got_badge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_profile_badge"
        tools:itemCount="1"/>

    <Button
        android:id="@+id/btn_finish_quiz_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:text="@string/btn_finish"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>